--- a/note.css
+++ b/note.css
@@ -1,6 +1,6 @@
 *{
     margin: 0px
-    padding: 0px;
+    padding: 0px
     font-size:1.1rem;
 }
 h1{
@@ -53,3 +53,4 @@ textarea{
     display:none;
 
 }
+
