--- a/note.css
+++ b/note.css
@@ -1,5 +1,5 @@
 *{
-    margin: 0px
+    margin: 0px;
     padding: 0px
     font-size:1.1rem
 }
@@ -53,5 +53,6 @@ textarea{
     display:none;
 
 }
+
 
 
